Added Google Products, working on model classes

--- a/Personal Insight/Personal Insight.csproj
+++ b/Personal Insight/Personal Insight.csproj
@@ -74,19 +74,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="IntroPage_1.xaml">
+    <Page Include="Pages\IntroPage_1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="IntroPage_2.xaml">
+    <Page Include="Pages\IntroPage_2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="IntroPage_3.xaml">
+    <Page Include="Pages\IntroPage_3.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -94,28 +94,23 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="IntroPage_1.xaml.cs">
+    <Compile Include="Models\GoogleProductModel.cs" />
+    <Compile Include="Models\GoogleProductsList.cs" />
+    <Compile Include="Pages\IntroPage_1.xaml.cs">
       <DependentUpon>IntroPage_1.xaml</DependentUpon>
     </Compile>
-    <Compile Include="IntroPage_2.xaml.cs">
+    <Compile Include="Pages\IntroPage_2.xaml.cs">
       <DependentUpon>IntroPage_2.xaml</DependentUpon>
     </Compile>
-    <Compile Include="IntroPage_3.xaml.cs">
+    <Compile Include="Pages\IntroPage_3.xaml.cs">
       <DependentUpon>IntroPage_3.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Page1.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -146,8 +141,11 @@
     <Resource Include="assets\img_directions\select_all.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="customize_archive.png" />
-    <Resource Include="select_all.png" />
+    <Resource Include="assets\img_directions\customize_archive.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\blogger_32dp.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
