--- a/Personal Insight/Personal Insight.csproj
+++ b/Personal Insight/Personal Insight.csproj
@@ -144,8 +144,62 @@
     <Resource Include="assets\img_directions\customize_archive.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="assets\blogger_32dp.png" />
+    <Resource Include="Pages\pay_32dp.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="assets\google_products\pay_32dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\google_products\blogger_32dp.png" />
+    <Resource Include="assets\google_products\bookmarks_googblue_36dp.png" />
+    <Resource Include="assets\google_products\bookmarks_ldpi.png" />
+    <Resource Include="assets\google_products\calendar_32dp.png" />
+    <Resource Include="assets\google_products\chrome_32dp.png" />
+    <Resource Include="assets\google_products\classroom_32dp.png" />
+    <Resource Include="assets\google_products\cloud_print_32dp.png" />
+    <Resource Include="assets\google_products\contacts_32dp.png" />
+    <Resource Include="assets\google_products\devices_other_googblue_48dp.png" />
+    <Resource Include="assets\google_products\drive_32dp.png" />
+    <Resource Include="assets\google_products\gboard_32dp.png" />
+    <Resource Include="assets\google_products\gfit_36dp.png" />
+    <Resource Include="assets\google_products\gmail_32dp.png" />
+    <Resource Include="assets\google_products\googleg_36dp.png" />
+    <Resource Include="assets\google_products\google_home_32dp.png" />
+    <Resource Include="assets\google_products\google_my_business_32dp.png" />
+    <Resource Include="assets\google_products\google_news_32dp.png" />
+    <Resource Include="assets\google_products\google_takout-shopping_list_32x32.png" />
+    <Resource Include="assets\google_products\google_voice_36dp.png" />
+    <Resource Include="assets\google_products\groups_32dp.png" />
+    <Resource Include="assets\google_products\hands_free_64.png" />
+    <Resource Include="assets\google_products\hangouts_32dp.png" />
+    <Resource Include="assets\google_products\hangouts_on_air_32dp.png" />
+    <Resource Include="assets\google_products\history_googblue_36dp.png" />
+    <Resource Include="assets\google_products\ic_tailwind_32dp.png" />
+    <Resource Include="assets\google_products\identity_32dp.png" />
+    <Resource Include="assets\google_products\keep_48dp.png" />
+    <Resource Include="assets\google_products\logo_gsuite_marketplace_48.png" />
+    <Resource Include="assets\google_products\logo_my_maps_32x32.png" />
+    <Resource Include="assets\google_products\maps_32dp.png" />
+    <Resource Include="assets\google_products\maps_48dp.png" />
+    <Resource Include="assets\google_products\one_32dp.png" />
+    <Resource Include="assets\google_products\order_purchase_96x96_0f9e2a7d902a3e349c9bc81b74a2ff55.png" />
+    <Resource Include="assets\google_products\photos_32dp.png" />
+    <Resource Include="assets\google_products\play_books_32dp.png" />
+    <Resource Include="assets\google_products\play_devconsole_32dp.png" />
+    <Resource Include="assets\google_products\play_games_32dp.png" />
+    <Resource Include="assets\google_products\play_movies_32dp.png" />
+    <Resource Include="assets\google_products\play_music_32dp.png" />
+    <Resource Include="assets\google_products\play_prism_32dp.png" />
+    <Resource Include="assets\google_products\reminder_googblue_36dp.png" />
+    <Resource Include="assets\google_products\shopping_48dp.png" />
+    <Resource Include="assets\google_products\sites_32dp.png" />
+    <Resource Include="assets\google_products\streetview_32dp.png" />
+    <Resource Include="assets\google_products\tasks_32dp.png" />
+    <Resource Include="assets\google_products\textcube_64.png" />
+    <Resource Include="assets\google_products\verified_user_googblue_36dp.png" />
+    <Resource Include="assets\google_products\warehouse_ldpi.png" />
+    <Resource Include="assets\google_products\youtube_32dp.png" />
+    <Resource Include="assets\google_products\youtube_gaming_32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
