Testing data binding

--- a/Personal Insight/Personal Insight.csproj
+++ b/Personal Insight/Personal Insight.csproj
@@ -86,6 +86,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\IntroPage_4.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\IntroPage_5.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,6 +104,7 @@
     </Compile>
     <Compile Include="Models\GoogleProductModel.cs" />
     <Compile Include="Models\GoogleProductsList.cs" />
+    <Compile Include="Models\HelpfulMethods.cs" />
     <Compile Include="Pages\IntroPage_1.xaml.cs">
       <DependentUpon>IntroPage_1.xaml</DependentUpon>
     </Compile>
@@ -104,6 +113,12 @@
     </Compile>
     <Compile Include="Pages\IntroPage_3.xaml.cs">
       <DependentUpon>IntroPage_3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\IntroPage_4.xaml.cs">
+      <DependentUpon>IntroPage_4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\IntroPage_5.xaml.cs">
+      <DependentUpon>IntroPage_5.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -192,6 +207,15 @@
     <Resource Include="assets\google_products\Tasks.png" />
     <Resource Include="assets\google_products\Voice.png" />
     <Resource Include="assets\google_products\YouTube.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\google_products\GPC.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\icons\icons8-tick-box-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\google_products\NotFound.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
