--- a/Personal Insight/packages.config
+++ b/Personal Insight/packages.config
@@ -1,9 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
+  <package id="DDay.iCal" version="1.0.2.575" targetFramework="net472" />
+  <package id="Galactic.Calendar" version="1.3.0.499" targetFramework="net472" />
+  <package id="Galactic.Calendar.iCalendar" version="1.3.0.499" targetFramework="net472" />
+  <package id="Galactic.Configuration" version="1.3.0.499" targetFramework="net472" />
+  <package id="Galactic.Cryptography" version="1.3.0.499" targetFramework="net472" />
+  <package id="Galactic.EventLog" version="1.3.0.499" targetFramework="net472" />
+  <package id="Galactic.FileSystem" version="1.3.0.499" targetFramework="net472" />
+  <package id="Ical.Net" version="4.1.11" targetFramework="net472" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net472" />
+  <package id="NodaTime" version="2.0.2" targetFramework="net472" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
 </packages>
