--- a/Personal Insight/packages.config
+++ b/Personal Insight/packages.config
@@ -14,6 +14,7 @@
   <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="NodaTime" version="2.0.2" targetFramework="net472" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
   <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net472" />
